<resources>
<<<<<<< HEAD
    <string name="app_name">ToTravel</string>
    <string name="view_weather">View Weather</string>
    <string name="degree_celsius_symbol">°C</string>
    <string name="description_weather_condition_icon">weather condition icon</string>
    <string name="label_humidity">Humidity</string>
    <string name="label_pressure">Pressure</string>
    <string name="label_visibility">Visibility</string>
    <string name="label_sunrise">Sunrise</string>
    <string name="label_sunset">Sunset</string>
    <string name="hint_enter_trip_name">Enter your trip name!</string>
    <string name="hint_enter_trip_start_date">Enter your trip start date!</string>
    <string name="hint_enter_trip_end_date">Enter your trip end date!</string>
    <string name="hint_enter_start_date">Enter the start date!</string>
    <string name="hint_enter_end_date">Enter the end date!</string>
    <string name="hint_enter_location">Enter the location!</string>
    <string name="hint_enter_notes">Enter the notes!</string>
    <string name="cancel">Cancel</string>
    <string name="save">Save</string>
=======
    <string name="app_name">To Travel</string>
>>>>>>> main
</resources>