<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="?attr/actionBarSize"
    android:background="#FFFFFFFF"
    android:orientation="vertical"
    android:paddingLeft="@dimen/activity_margin"
    android:paddingRight="@dimen/activity_margin"
    android:paddingTop="@dimen/activity_margin">

    <EditText
        android:id="@+id/inputETTripName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minLines="1"
        android:background="@android:color/transparent"
        android:gravity="top"
        android:hint="@string/hint_enter_trip_name"
        android:inputType="textCapSentences|textMultiLine"
        android:textColorHint="@color/hint_enter_summary"
        android:textSize="@dimen/input_new_note"
        android:autofillHints=""
        />

    <EditText
        android:id="@+id/inputETTripDate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minLines="1"
        android:background="@android:color/transparent"
        android:gravity="top"
        android:hint="@string/hint_enter_trip_date"
        android:inputType="textCapSentences|textMultiLine"
        android:textColorHint="@color/hint_enter_summary"
        android:textSize="@dimen/input_new_note"
        android:autofillHints=""
        tools:ignore="TextFields" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >
        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/saveButton"
            android:layout_weight="1"
            style="?android:attr/buttonBarButtonStyle"
            android:text="@string/save"
            />
        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/cancelButton"
            android:layout_weight="1"
            style="?android:attr/buttonBarButtonStyle"
            android:text="@string/cancel"
            />
    </LinearLayout>
</LinearLayout>