<?xml version="1.0" encoding="utf-8"?>

<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="#FFFFFF"
    android:orientation="vertical"
    android:padding="16dp"
>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Location"
        android:textSize="25sp"
        android:textStyle="bold"
        android:textColor="@color/colorPrimaryDark"
        android:layout_marginBottom="10dp"/>
    <EditText
        android:id="@+id/inputETLocation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minLines="1"
        android:gravity="top"
        android:hint="@string/hint_enter_location"
        android:inputType="textCapSentences|textMultiLine"
        android:textColorHint="@color/hint_enter_details"
        android:textSize="@dimen/input_new_note"
        android:autofillHints=""
        android:layout_marginBottom="10dp"
        android:padding="8dp"
        android:textColor="@color/enter_text"
        android:background="@drawable/enter_space"
        android:focusable="true"
        android:paddingStart="15dp"
        tools:ignore="TextFields" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Start Date"
        android:textSize="25sp"
        android:textStyle="bold"
        android:textColor="@color/colorPrimaryDark"
        android:layout_marginBottom="10dp"/>
    <EditText
        android:id="@+id/inputETDateStart"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minLines="1"
        android:gravity="top"
        android:hint="@string/hint_enter_start_date"
        android:layout_marginBottom="10dp"
        android:inputType="none"
        android:textColorHint="@color/hint_enter_details"
        android:textSize="@dimen/input_new_note"
        android:autofillHints=""
        android:padding="8dp"
        android:textColor="@color/enter_text"
        android:background="@drawable/enter_space"
        android:focusable="true"
        android:paddingStart="15dp"
        android:editable="false"
        />
    <DatePicker
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:datePickerMode="spinner"
        android:id="@+id/datepickerStart"
        android:calendarViewShown="false"
        android:layout_gravity="center"
        android:visibility="gone"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="End Date"
        android:textSize="25sp"
        android:textStyle="bold"
        android:textColor="@color/colorPrimaryDark"
        android:layout_marginBottom="10dp"/>
    <EditText
        android:id="@+id/inputETDateEnd"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:minLines="1"
        android:gravity="top"
        android:hint="@string/hint_enter_end_date"
        android:inputType="none"
        android:textColorHint="@color/hint_enter_details"
        android:textSize="@dimen/input_new_note"
        android:autofillHints=""
        android:padding="8dp"
        android:textColor="@color/enter_text"
        android:background="@drawable/enter_space"
        android:focusable="true"
        android:paddingStart="15dp"
        android:editable="false"
        />
    <DatePicker
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:datePickerMode="spinner"
        android:calendarViewShown="false"
        android:layout_gravity="center"
        android:id="@+id/datepickerEnd"
        android:visibility="gone"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Note"
        android:textSize="25sp"
        android:textStyle="bold"
        android:textColor="@color/colorPrimaryDark"
        android:layout_marginBottom="10dp"/>
    <EditText
        android:id="@+id/inputETNotes"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:minLines="6"
        android:gravity="top"
        android:hint="@string/hint_enter_notes"
        android:inputType="textCapSentences|textMultiLine"
        android:textColorHint="@color/hint_enter_details"
        android:textSize="@dimen/input_new_note"
        android:autofillHints=""
        android:padding="8dp"
        android:textColor="@color/enter_text"
        android:background="@drawable/enter_space"
        android:focusable="true"
        android:paddingStart="15dp"
        tools:ignore="TextFields" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="10dp"
        >
        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/saveButton"
            android:layout_weight="1"
            style="?android:attr/buttonBarButtonStyle"
            android:text="@string/save"
            />
        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/cancelButton"
            android:layout_weight="1"
            style="?android:attr/buttonBarButtonStyle"
            android:textColor="@color/hint_enter_details"
            android:text="@string/cancel"
            />
    </LinearLayout>
</LinearLayout>
</ScrollView>